--- a/SCSS/_cards.scss
+++ b/SCSS/_cards.scss
@@ -123,3 +123,65 @@
         height: 20rem;
     }    
 } */
+
+.card_masServicios{
+    width: 15rem;
+    height: 18rem;
+    display: flex;
+    background: none;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    position: relative;
+    border: none;
+    outline: 1px solid $color_gris_claro;
+    outline-offset: -8px;
+    box-shadow: rgba(87, 169, 218, 0.884) 3px 4px 17px;
+    transition: all 1s ease-in-out;
+    &:hover{
+        transition: all 1s ease-in-out;
+        box-shadow: rgba(236, 129, 29, 0.89) 3px 4px 17px;
+        outline: 1px solid $color_naranja_cohete;
+        outline-offset: -8px;
+        .card_title{
+            color: $color_naranja_cohete;
+        }
+    };
+    .contenedor_btn_card{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        @include margin__Espaciado(1em,1em);
+        .btn_card{
+            color: $color_gris_claro;
+            font-family: $letra__secundaria;
+            font-weight: bold;
+            text-decoration: none;
+            padding: 10px 15px;
+            border: 3px solid $color_gris_claro;
+            border-radius: 10px;
+            &:hover{
+                color: $color_naranja_cohete;
+                animation: pulsate 1s ease-in-out;
+                border: 3px solid $color_naranja_cohete;
+            };
+        }
+    }
+}
+.dp_masServicios{
+    @include flex__ColumnCenterAll;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transition: all 1s ease-in-out;
+    @include compatibilidad_transition(all 1s ease-in-out);
+    padding: 1em;
+    .card_title{
+        font-family: $letra__principal;
+        color: $color_gris_claro;
+        width: 100%;
+        text-align: center;
+        transition: all .1s ease-in-out;
+    }
+}
