--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -12,22 +12,39 @@ body{
     background-color: $color_gris;
     scroll-behavior: smooth;
 }
+.background{
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    background-image: url("../assets/img/pack\ camino\ digital\ 3\ 1200.webp");
+    background-size: 100% 100%;
+    position: absolute;
+    z-index: -45;
+}
 header{
     width: 100%;
+    //background-image: url("../assets/ideas/cementerio_espacial.jpg");
+    //background-repeat: repeat;
+    //background-size: auto;
+    //inicio navbar
+    //background: none;
     clear: both;
     content:'';
     position: sticky;
     top: 0;
-    z-index: 45;
-    //background-image: url("../assets/ideas/cementerio_espacial.jpg");
-    //background-repeat: repeat;
-    //background-size: auto;
+    z-index: 95;
     .navbar{
         flex-wrap: nowrap;
+    }    
+    .particles-js-canvas-el{
+        position: absolute;
+        z-index: -15;
+        background-color: #000000;
     }
     nav{
-        background-color: $color_gris_oscuro;
-        //background: none;
+        //background-color: #000000;
+        position: relative;
+        background-color: transparent;
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
@@ -95,7 +112,7 @@ header{
             }
         }
     }
-    //logo header
+    //logo navbar
     .contenedor_logo_header{
         width: 35%;
         display: flex;
@@ -119,6 +136,7 @@ header{
     #toggler, .contenedor_burgerMenu, .burger_menu, .center{
         display: none;
     }
+    //fin navbar
 }
 .main{
     width: 100%;
@@ -127,22 +145,25 @@ header{
     width: 100%;
     display: flex;
     @include margin__Espaciado(0,2em);
+    background: none;
     .contenedor_presentacion{
         width: 100%;
-        background-color: inherit;
+        /* background-color: inherit; */
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         padding: 2em;
-        @include margin__Espaciado(3em,3em);
-        .contenedor_presentacion_h1{
+
+       /*  background-position: bottom; */
+/*         @include margin__Espaciado(3em,3em);
+ */        .contenedor_presentacion_h1{
             display: flex;
             flex-wrap: wrap;
             width: 100%;
             justify-content: flex-start;
             align-items: center;
             font-size: 20px;
-            @include margin__Espaciado(2em,2em);
+/*             @include margin__Espaciado(2em,2em); */
             .presentacion_h1{
                 color: $color_celeste_oscuro;
                 width: 80%;
@@ -190,7 +211,7 @@ header{
         width: 100%;
         @include margin__Espaciado(2em,2em);
         position: relative;
-        background-color: $color_gris_oscuro;
+        background-color: #000000;
         .containerStar{
             display: flex;
             flex-direction: row;
