--- a/CSS/main.css
+++ b/CSS/main.css
@@ -881,6 +881,8 @@ header .navbar {
 header .particles-js-canvas-el {
   position: absolute;
   z-index: -15;
+  width: 100%;
+  height: 100%;
   background-color: #000000;
 }
 header nav {
@@ -2219,6 +2221,7 @@ header .center div {
   }
   header #toggler:checked ~ .contenedor_header_secciones {
     max-height: 100%;
+    background-color: #000000;
   }
   header .socialMedia {
     margin-top: 1em;
