--- a/CSS/main.css
+++ b/CSS/main.css
@@ -32,14 +32,24 @@
     transform: translateY(4.8rem) scale(0.5);
   }
 }
+@keyframes camuflaje {
+  0% {
+    color: #F76304;
+  }
+}
 .contenedor_animationChevron {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   width: 100%;
-  margin-top: 2em;
-  margin-bottom: 4em;
+  height: 100%;
+  min-height: 100px;
+  margin-top: 0em;
+  margin-bottom: 0em;
+  position: absolute;
+  top: 80%;
+  max-height: 50px;
 }
 
 .container_chevron {
@@ -74,7 +84,8 @@
   top: 0;
   height: 100%;
   width: 50%;
-  background: #57A9DA;
+  background: #E0E0E0;
+  box-shadow: rgba(249, 251, 252, 0.884) 3px 4px 40px;
 }
 
 .chevron:before {
@@ -912,7 +923,7 @@ header nav div ul li a {
   text-decoration: none;
   color: inherit;
 }
-header nav div ul li:hover {
+header nav div ul a:hover {
   color: #57A9DA;
 }
 header nav div ul .socialMedia {
@@ -989,28 +1000,37 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
 
 .section_presentacion {
   width: 100%;
+  height: 100vh;
   display: flex;
   margin-top: 0;
-  margin-bottom: 2em;
+  margin-bottom: 0em;
   background: none;
 }
 .section_presentacion .contenedor_presentacion {
   width: 100%;
+  height: 100%;
   /* background-color: inherit; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 2em;
+  align-items: center;
   /*  background-position: bottom; */
-  /*         @include margin__Espaciado(3em,3em);
-   */
+  /*         @include margin__Espaciado(3em,3em); */
+}
+.section_presentacion .contenedor_presentacion .containerCarouselButton {
+  display: flex;
+  justify-content: stretch;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
 .section_presentacion .contenedor_presentacion .contenedor_presentacion_h1 {
   display: flex;
-  flex-wrap: wrap;
-  width: 100%;
+  flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  width: 100%;
   font-size: 20px;
   /*             @include margin__Espaciado(2em,2em); */
 }
@@ -1018,13 +1038,91 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   color: #57A9DA;
   width: 80%;
 }
+.section_presentacion .contenedor_presentacion .swiper {
+  max-height: 100px;
+  width: 100%;
+  height: 100%;
+}
+.section_presentacion .contenedor_presentacion .swiper-slide {
+  text-align: center;
+  animation: camuflaje;
+  background: none;
+  color: #57A9DA;
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.section_presentacion .contenedor_presentacion .swiper-slide-active {
+  transition: all 2s ease-in-out;
+  color: #F76304;
+}
+.section_presentacion .contenedor_presentacion .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.section_presentacion .contenedor_presentacion .container_btn_presentacion {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  margin-top: 1em;
+}
+.section_presentacion .contenedor_presentacion .container_btn_presentacion .btn_presentacion {
+  font-family: "Fugaz One", cursive;
+  text-decoration: none;
+  width: 130px;
+  height: 50px;
+  border: 2px solid #E0E0E0;
+  border-radius: 10px;
+  background-color: transparent;
+  color: #E0E0E0;
+  cursor: pointer;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.section_presentacion .contenedor_presentacion .container_btn_presentacion .btn_presentacion:hover {
+  color: #57A9DA;
+  border: 2px solid #57A9DA;
+  transition: 1s ease;
+}
+.section_presentacion .contenedor_presentacion .container_btn_presentacion .btn_presentacion::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50px;
+  background: transparent;
+  height: 50%;
+  width: 100%;
+  transform: perspective(1em) rotateX(40deg) scale(1, 0.45);
+  filter: blur(8px);
+  transition: 1s ease;
+}
+.section_presentacion .contenedor_presentacion .container_btn_presentacion .btn_presentacion:hover::before {
+  background: #57A9DA;
+  top: 50px;
+}
 
 .contenedor_btn_pulse {
   width: 100%;
   height: 100%;
   display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
+  align-items: center;
+  justify-content: center;
 }
 .contenedor_btn_pulse .btn_pulse {
   color: #E0E0E0;
@@ -1047,7 +1145,7 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   align-items: center;
   width: 100%;
   flex-direction: column;
-  margin-top: 4em;
+  margin-top: 0em;
   margin-bottom: 2em;
 }
 .section_servicios hr {
@@ -1056,6 +1154,7 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   transition: all 0.35 ease-in-out;
   margin-top: 3em;
   margin-bottom: 3em;
+  margin-top: -2em;
 }
 .section_servicios h2 {
   margin-top: 2em;
@@ -1064,6 +1163,7 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   text-align: center;
   color: #57A9DA;
   font-family: "Fugaz One", cursive;
+  margin-top: 0;
   transition: all 1s ease-in-out;
   -moz-transition: all 1s ease-in-out;
   -webkit-transition: all 1s ease-in-out;
@@ -1071,6 +1171,15 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
 }
 .section_servicios h2:hover {
   color: #F76304;
+}
+.section_servicios .section_servicios_paragraph {
+  width: 100%;
+  text-align: left;
+  color: #E0E0E0;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  width: 60%;
 }
 .section_servicios .particles-js-canvas-el {
   position: absolute;
@@ -2143,6 +2252,11 @@ footer .footer__copyright {
     width: 25%;
   }
 }
+@media screen and (max-width: 920px) {
+  .section_contacto .formulario_contenedor_textarea .contenedor_btn_formulario .btn_formulario {
+    min-width: 170px;
+  }
+}
 @media screen and (max-width: 900px) {
   header nav {
     justify-content: space-between;
@@ -2228,11 +2342,6 @@ header .center div {
     margin-bottom: 1em;
   }
 }
-@media screen and (max-width: 920px) {
-  .section_contacto .formulario_contenedor_textarea .contenedor_btn_formulario .btn_formulario {
-    min-width: 170px;
-  }
-}
 @media screen and (max-width: 768px) {
   .socialMedia_anchord i, .socialMedia_anchord img {
     margin-bottom: 1em;
@@ -2316,6 +2425,20 @@ header .center div {
   }
 }
 @media screen and (max-width: 520px) {
+  .section_presentacion .contenedor_presentacion .containerCarouselButton .carouselPresentacion {
+    margin-top: 1em;
+  }
+  .section_presentacion .contenedor_presentacion .containerCarouselButton .container_btn_presentacion {
+    margin-top: 4em;
+  }
+  .section_presentacion .contenedor_presentacion .containerCarouselButton .container_btn_presentacion .btn_presentacion {
+    color: #57A9DA;
+    border: 2px solid #57A9DA;
+  }
+  .section_presentacion .contenedor_presentacion .containerCarouselButton .container_btn_presentacion .btn_presentacion::before {
+    background: #57A9DA;
+  }
+
   .section_servicios h2 {
     width: 90%;
   }
