--- a/SCSS/_responsive.scss
+++ b/SCSS/_responsive.scss
@@ -276,6 +276,12 @@
         h2{
             width: 90%;
         }
+        .section_servicios{
+            .section_servicios_paragraph{
+                width: 90%;
+            }
+        }
+
         .container_content_impulso{
             .container_impulso_speach{
                 min-height: 10rem;
