--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -288,16 +288,17 @@ header{
     @include margin__Espaciado(0em,2em);
     hr{
         @include hr;
-        margin-top: -2em;
     }
     h2{
         @include h2;
-        margin-top: 0;
         @include camuflaje;
     }
     .section_servicios_paragraph{
         @include p;
         width: 60%;
+        span{
+            @include span;
+        }
     }
     .particles-js-canvas-el{
         position: absolute
@@ -393,7 +394,7 @@ header{
         flex-wrap: nowrap;
         width: 100%;
         height: 100%;
-        @include margin__Espaciado(2em,2em);
+        @include margin__Espaciado(2em,3em);
     }
     .container_content_impulso{
         @include flex__ColumnCenterAll;
