--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -296,6 +296,7 @@ header{
     .section_servicios_paragraph{
         @include p;
         width: 60%;
+        text-align: justify;
         span{
             @include span;
         }
