--- a/SCSS/_cards.scss
+++ b/SCSS/_cards.scss
@@ -49,6 +49,10 @@
         text-align: center;
         transition: all .5s ease-in-out;
     }
+    i{
+        font-size: 30px;
+        color: white;
+    }
 }
 .card_content{
     display: flex;
