--- a/SCSS/_chevron.scss
+++ b/SCSS/_chevron.scss
@@ -16,7 +16,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50%;
+    width: 50px;
     height: 100%;
 }
 .chevron {
