--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -16,7 +16,7 @@ body{
     width: 100%;
     height: 100vh;
     overflow: hidden;
-    background-image: url("../assets/img/pack\ camino\ digital\ 3\ 1200.webp");
+    background-image: url("../assets/img/background.jpg");
     background-size: 100% 100%;
     position: absolute;
     z-index: -45;
@@ -400,10 +400,9 @@ header{
     .container_content_impulso{
         @include flex__ColumnCenterAll;
         width: 25%;
-        min-width: 22rem;
-        max-width: 20rem;
+        max-width: 22rem;
         height: 100%;
-        min-height: 38rem;
+        min-height: 32.5rem;
         @include margin__Espaciado(1em,1em);
         box-shadow: rgba(87, 169, 218, 0.884) 3px 4px 17px;
         border-radius: 15pt;
@@ -437,12 +436,12 @@ header{
         .contenedor_btns{
             width: 100%;
             @include flex__ColumnCenterAll;
-            @include margin__Espaciado(1em,2em);
+            @include margin__Espaciado(0em,1em);
         }   
         .container_impulso_speach{
             width: 90%;
             height: 100%;
-            min-height: 15rem;
+            min-height: 12rem;
             @include flex__ColumnCenterAll;
             .impulso_title{
                 text-align: center;
@@ -453,8 +452,9 @@ header{
             }
             .impulso_paragraph{
                 @include p;
-                font-weight: bold;
-                width: 85%;
+                //font-weight: bold;
+                text-align: justify;
+                width: 70%;
             }
         }
         .btn_impulsos{
@@ -497,10 +497,12 @@ header{
                 border: 3px solid $color_naranja_cohete
             };
         }
-
     }
     .caminoDigital_container{
         @include flex__ColumnCenterAll;
+        h2{
+            margin-top: 1em
+        }
         .container_content_caminoDigital{
             @include flex__ColumnCenterAll;
             width: 35%;
@@ -745,7 +747,7 @@ header{
         flex-direction: row;
         flex-wrap: wrap;
         width: 80%;
-        max-width: 1000px;
+        max-width: 500px;
         justify-content: center;
         align-items: flex-start;
         .contacto_redes{
@@ -993,6 +995,15 @@ header{
             background-color: $color_gris;
             @include margin__Espaciado(2em,2em);
             //overflow: auto;
+        }
+        .container_calendar{
+            width: 90%;
+            max-width: 600px;
+            height: 100%;
+            max-height: 400px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
     }
 }
